# pesde

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  clippy.toml  default.nix  docker-compose.yaml  flake.nix  fly.toml  rustfmt.toml
crates/registry/: Cargo.toml
crates/registry-backend-mysql/: Cargo.toml
crates/registry-backend-mysql/.sqlx/: query-00a61b800d4a4ba7c2ae568ff4842add4bf0cf02860662a451ba72baea3cd5d9.json  query-138b98a9715cfed743bc301fdb982fb5263b82a83942bb2787b59fbad2ad209c.json  query-1827b09b91c8520d2d307d4e5f9897cf6dea514286492b5e5757a716c58a74e5.json  query-1967433e3a5270c8a2c60ee65028c2bce0e78abadb3dad5db019111b9b3b6e09.json  query-20e727c63ac276abe3e4e7d1bf89522167e7971970a45960b2b427d226078b6a.json  query-224ef9a353ad9f6319391e77c3486e8f8759d758a63f5826c43098e3e396c0b5.json  query-251f735d55c6ebffc9a97bb9cda171fde6ae904392583845eefb10592af4469d.json  query-308b658042786bdaf9c4d34b27aa852031e91bdcdf3e1a38f01c176c57a8c607.json  query-32f51a525a96bc69e590b0144eb9a1599e86a84e205b84ca86e090cd07038cff.json  query-39dc301580df32dea79b27bb3d0625597306e9e4cbe462a3b6d4375db38e34a9.json  query-3cd406db5ee597d8e96594a647ac2e71bc56c35861c835500f976a95809b556b.json  query-3ee7cb08199bff1b57c5a5efc6ddeffd1b8b5c810a06d939bc3f0d7d468869bc.json  query-4cf2aa69a7c9c6eadc439db1fea20b0d635225ef391d14c4ce9783bd998d098d.json  query-51b104f6e9eaba4d0c16fa1dea6189c346ad01e1b3a8c3cba11e9353ff43c51a.json  query-53e1048f5a01db118f6827e5f184fe6b82945f95fd37789a844f16a119e34add.json  query-67862b30333d40cadbbdeea36b345ce5c79740bdd752312f8aa764777e147909.json  query-6a5c86a0b02b15cefb078e58271cf231c99335c8261046155d28d141536b885f.json  query-749e8415a2e6ad4e5e5fb820803516fa34b6e0724804cc87d405f47df04a1070.json  query-763da6690f135d3eac3eab17e60a0f059fca5298a0d990f639c21d4f8195090b.json  query-7ac10da3e254b22e2a0b2d10bb0f757b61fdd706e50d621d3944fe757292fd23.json  query-8223c79e479e6554cd422fda2d3ed549f0e221367e6ce41adce5c0d4c86dc903.json  query-868ae4f22f9173b4f456ee1e1934d9999d86049519740aa0ce84c9efc0669f8e.json  query-8a89d328e950c6ff5496baf27f50c9a995916c2891d2d88c158c1ae17473ed27.json  query-95189c0f467b8999d96e4a39be814f1fd1311006b075c3b6924cda1d5703f831.json  query-9f44466681df1771f4de13da3fde22be3ef697dfefcf16dee184ef3db3b6ca35.json  query-a9bc5c86a9e1896d1deda3fd60f99436e1ab1c2936bdf7476154dc58d5dd7de5.json  query-b83aa72e2fba0b4721058916d5194224daf588197e84741709544a5ebeec98fe.json  query-c134a5c58a3340b295e03068511058b1a48d9ab5ac75604cdbb9b1d447c448cf.json  query-ca4960121e87c858f4077e817bc49df116fa7b20383caa58d253afe0145637f8.json  query-cd9267fccb4c4d9f94fb95dbabe56a0eb072d4a880b9222c59a5dad48a12cd5c.json  (+4 more)
crates/registry-core/: Cargo.toml
crates/registry-core/src/: db.rs  (+2 more)
registry/: .env.example  CHANGELOG.md  Cargo.toml
registry/.sqlx/: query-04166e2f67ec47ad4ee2cc3c2ba485d64f0bb64478a326f653020d6098e1cf52.json  query-041cd793f605f90e02265b7f2cd14ec9153d5ac081774f20c12c2a96596e52f0.json  query-09791f219a57cc13c4a34b81a7fddabf0e055f05d70293ac883da05269d9a655.json  query-0cf0314e42691d106a297f0c2210917cf052af711c6940ce5ef6e36f29f6cd8c.json  query-0f06fb8ff5b1d793a2d9e8b2ecd4e96cd24903e8c587b8721e6d6987ab026b4b.json  query-11f3d5fc13bf324738783115ab63a2b1d1f9ea2a5940a23b10d15a47ff0eaa11.json  query-163d8625deac5491870e7d5a5582a249bc7374b1706b5c5ba5a3b1e807a62aad.json  query-1fadc3f7d66c1a4254811296e957d77bcaeadaf880a0366a7068f11c0b09237d.json  query-218921afc5f1a8502277759193f961142b033ddf3753e92d43f0d0015aa00a80.json  query-24f03fd614ef914c1990a126a8d5c025f79181b3ab72780e797ddf1bdff42a7c.json  query-2b209420c21a391fce5170dd1cf959ea18b2fb2d3f12c7ba0ae99ffa3e6fe2cf.json  query-348e3fff5ae8353536de70eba4ac1e68cec5909aff61ffa4be959f8a4760fe81.json  query-35b030d7693db2e909345480fd61ab22e155cc021bfea444df8c3ba64d7ad5df.json  query-3a34e49c1f70c7f4d5408aa220a411024dc3700c4428fabe73040ff6142ba22f.json  query-3b75e29697d5f2426177d579bf39acb848868f0507d36d65d27e7ab0902af872.json  query-412f338db7d53f694a9179b377a11118f5df19564ab4180f3e510193e18ae8df.json  query-42aa371221f7b7258b8fdab195991790bd63014d4fb6d01b745f52aa4df68f2d.json  query-4734ff80a8812b8dca4c1f6b58164ce77faa7507766b39048d115f8e1f2a090d.json  query-47d0977ae66a2d297aa2ca90e00083eabee3c6dd5107849d534aa840ce438d0c.json  query-4cddeed24b91679579fc66ff47bfb6a478839233eaeb6a371fb6eb582e3dbeb9.json  query-58ce6cefa4b3a243d9c7e62efc388e036451630bfc185497187c60268ce0e762.json  query-5b3c744d0fea3950120d46739b19db29dd7e83007fd6629bb68f623db7ba2ccc.json  query-5b6d0384a34e4769a6f8a0994adb75dbc92cb79c68e7da3683ddcd9f4aa4c5fc.json  query-5c3ef7b441f3f29b6e51443345da2ccfc31c97c36b332640d1ecc1e4d8c8e909.json  query-5d0e5889fe855e2f91f245fb0e84cc23a79444a991a25b17420318cb45b3a007.json  query-5fa87f05de9d51d268ebfe27e2395bd99fac8d518c9c293319ab404f0c698da9.json  query-601ce183d19a8bb779411370cf42f46fc1464dd0f58e57357fc4d4bf3902711b.json  query-608aff37ae60cd07b400a375f280496fcaf84f268be90d40a29664065d29abb9.json  query-6562a994184609d7482ea32bae70eb67ac6669e177db96abe01246e2e42cd671.json  query-684df375efadbdad72830b93838811d6633e405ac7223fd02608a75b754e6007.json  query-6b518f156ae12ccaabcde9c83e07dbd1a7f6f913de854aecbe6e0235b0634764.json  query-743ecda82a60be6694be2de940b41197eac1ef97c15879af68019d0b7291f4fc.json  query-77c87c05ee5ea3b0f303821f070448edf091737c72d9c776a071afe794cf8398.json  query-7be7f30e8655dd39378086c49e693588f3c5e4af7aee217aa1e955f6dffc77dc.json  query-82a3297b65bae20ed4ef810407db4a02684fa99777531dc5d0514c41ee2117ac.json  query-856ec907f5c025ba889c335d407acc73c3ddba688aed2ef4059122496d42244c.json  query-87df78f3b4860a439e1f3fd1457c3b81b828807166aa967746a45b05507fe8d5.json  query-89491197e36c8d26f42ba9ab7c99a05c3a676bde41eab7fffa6dc23360456c03.json  query-8a60649a6838904fce605d340710077752628cb7d0fa5fe0bf0a282b8390b5ba.json  query-8a7e7b541f5603ac90c30d93daa369e0633c581a7f101186401015cc4cd989a4.json  (+26 more)
registry/migrations/: 20260507194238_init.sql
registry/src/: error.rs  git.rs  main.rs  package.rs  request_path.rs  search.rs  util.rs
(+271 files in other folders)
