[package]
name = "pesde"
version = "0.5.3"
edition = "2021"
license = "MIT"
authors = ["daimond113 <contact@daimond113.com>"]
description = "A package manager for the Luau programming language, supporting multiple runtimes including Roblox and Lune"
homepage = "https://pesde.daimond113.com"
repository = "https://github.com/pesde-pkg/pesde"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE", "CHANGELOG.md"]

[features]
bin = [
    "dep:clap",
    "dep:dirs",
    "dep:tracing-subscriber",
    "reqwest/json",
    "dep:indicatif",
    "dep:tracing-indicatif",
    "dep:inquire",
    "dep:toml_edit",
    "dep:colored",
    "dep:anyhow",
    "dep:keyring",
    "dep:open",
    "gix/worktree-mutation",
    "dep:serde_json",
    "dep:winreg",
    "fs-err/expose_original_error",
    "tokio/rt",
    "tokio/rt-multi-thread",
    "tokio/macros",
]
wally-compat = ["dep:async_zip", "dep:serde_json"]
patches = ["dep:git2"]
version-management = ["bin"]

[[bin]]
name = "pesde"
path = "src/main.rs"
required-features = ["bin"]

[lints.clippy]
uninlined_format_args = "warn"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
serde_with = "3.11.0"
gix = { version = "0.68.0", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "revparse-regex", "credentials", "parallel"] }
semver = { version = "1.0.24", features = ["serde"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
tokio-tar = "0.3.1"
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }
pathdiff = "0.2.3"
relative-path = { version = "1.9.3", features = ["serde"] }
tracing = { version = "0.1.41", features = ["attributes"] }
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["process"] }
tokio-util = "0.7.13"
async-stream = "0.3.6"
futures = "0.3.31"
full_moon = { version = "1.1.2", features = ["luau"] }
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
sha2 = "0.10.8"
tempfile = "3.14.0"
wax = { version = "0.6.0", default-features = false }
fs-err = { version = "3.0.0", features = ["tokio"] }

# TODO: remove this when gitoxide adds support for: committing, pushing, adding
git2 = { version = "0.19.0", optional = true }

async_zip = { version = "0.0.17", features = ["tokio", "deflate", "deflate64", "tokio-fs"], optional = true }
serde_json = { version = "1.0.133", optional = true }

anyhow = { version = "1.0.94", optional = true }
open = { version = "5.3.1", optional = true }
keyring = { version = "3.6.1", features = ["crypto-rust", "windows-native", "apple-native", "async-secret-service", "async-io"], optional = true }
colored = { version = "2.1.0", optional = true }
toml_edit = { version = "0.22.22", optional = true }
clap = { version = "4.5.23", features = ["derive"], optional = true }
dirs = { version = "5.0.1", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
indicatif = { version = "0.17.9", optional = true }
tracing-indicatif = { version = "0.3.8", optional = true }
inquire = { version = "0.7.5", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.52.0", optional = true }

[workspace]
resolver = "2"
members = ["registry"]

[profile.dev.package.full_moon]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
incremental = true
codegen-units = 1

[profile.release.package.pesde-registry]
# add debug symbols for Sentry stack traces
debug = "full"