[package]
name = "pesde"
version = "0.6.0-rc.6"
edition = "2021"
license = "MIT"
authors = ["daimond113 <contact@daimond113.com>"]
description = "A package manager for the Luau programming language, supporting multiple runtimes including Roblox and Lune"
homepage = "https://pesde.daimond113.com"
repository = "https://github.com/pesde-pkg/pesde"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE", "CHANGELOG.md"]

[features]
default = ["wally-compat", "patches"]
bin = [
    "dep:clap",
    "dep:dirs",
    "dep:tracing-subscriber",
    "dep:indicatif",
    "dep:inquire",
    "dep:toml_edit",
    "dep:console",
    "dep:anyhow",
    "dep:keyring",
    "dep:open",
    "dep:paste",
    "dep:serde_json",
    "dep:windows-registry",
    "dep:windows",
    "gix/worktree-mutation",
    "fs-err/expose_original_error",
    "tokio/rt",
    "tokio/rt-multi-thread",
    "tokio/macros",
]
wally-compat = ["dep:serde_json"]
patches = ["dep:git2"]
version-management = ["bin"]

[[bin]]
name = "pesde"
path = "src/main.rs"
required-features = ["bin"]

[lints.clippy]
uninlined_format_args = "warn"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
gix = { version = "0.70.0", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "revparse-regex", "credentials", "parallel"] }
semver = { version = "1.0.25", features = ["serde"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio-tar = "0.3.1"
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }
pathdiff = "0.2.3"
relative-path = { version = "1.9.3", features = ["serde"] }
tracing = { version = "0.1.41", features = ["attributes"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["process", "macros"] }
tokio-util = "0.7.13"
async-stream = "0.3.6"
futures = "0.3.31"
full_moon = { version = "1.2.0", features = ["luau"] }
url = { version = "2.5.4", features = ["serde"] }
jiff = { version = "0.1.29", default-features = false, features = ["serde", "std"] }
sha2 = "0.10.8"
tempfile = "3.16.0"
wax = { version = "0.6.0", default-features = false }
fs-err = { version = "3.1.0", features = ["tokio"] }
urlencoding = "2.1.3"
async_zip = { version = "0.0.17", features = ["tokio", "deflate", "deflate64", "tokio-fs"] }

# TODO: remove this when gitoxide adds support for: committing, pushing, adding
git2 = { version = "0.20.0", optional = true }

serde_json = { version = "1.0.138", optional = true }

anyhow = { version = "1.0.95", optional = true }
open = { version = "5.3.2", optional = true }
keyring = { version = "3.6.1", features = ["crypto-rust", "windows-native", "apple-native", "sync-secret-service"], optional = true }
console = { version = "0.15.10", optional = true }
toml_edit = { version = "0.22.23", optional = true }
clap = { version = "4.5.28", features = ["derive"], optional = true }
dirs = { version = "6.0.0", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
indicatif = { version = "0.17.11", optional = true }
inquire = { version = "0.7.5", default-features = false, features = ["console", "one-liners"], optional = true }
paste = { version = "1.0.15", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-registry = { version = "0.4.0", optional = true }
windows = { version = "0.59.0", features = ["Win32_Storage", "Win32_Storage_FileSystem", "Win32_Security"], optional = true }

[dev-dependencies]
schemars = { git = "https://github.com/daimond113/schemars", rev = "bc7c7d6", features = ["semver1", "url2"] }

[workspace]
resolver = "2"
members = ["registry"]

[profile.dev.package.full_moon]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
incremental = true
codegen-units = 1
panic = "abort"

[profile.release.package.pesde-registry]
# add debug symbols for Sentry stack traces
debug = "full"
