[package]
name = "pesde-registry"
version = "0.3.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
fs-err = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
semver = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
merkleberg = { workspace = true }

actix-web = "4.13.0"
actix-cors = "0.7.1"
tracing-actix-web = "0.7.21"

sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "migrate",
    "sqlite",
] }
dotenvy = "0.15.7"
rusty-s3 = "0.9.1"

pesde = { path = "..", default-features = false }
