[package]
name = "pesde-registry-core"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
merkleberg = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }

pesde = { path = "../..", default-features = false }
